# OpticMCP

./: .bumpversion.cfg  .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  client.py  optic_mcp.py  pyproject.toml  test_camera.py
.github/workflows/: ci.yml  publish.yml
src/optic_mcp/: __init__.py  analyze.py  compare.py  decode.py  detect.py  hls.py  http_image.py  mjpeg.py  rtsp.py  screen.py  server.py  stream.py  usb.py  validation.py
tests/: test_analyze.py  test_compare.py  test_detect.py  test_hls.py  test_rtsp.py  test_server.py  test_stream.py  test_usb.py  test_validation.py
